--- a/NSInstaApp/InstagramCell.xib
+++ b/NSInstaApp/InstagramCell.xib
@@ -4,15 +4,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="instagramItemCell">
-            <connections>
-                <outlet property="comment" destination="zeX-j6-LOx" id="C7a-Qi-8eZ"/>
-                <outlet property="owner" destination="N2m-gF-bst" id="xet-Uf-cNg"/>
-                <outlet property="photo" destination="8B6-D5-96d" id="mfu-3m-duD"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomInstaCell" rowHeight="243" id="XTo-wO-pvW" customClass="InstagramCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="243" id="XTo-wO-pvW" customClass="InstagramCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="243"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XTo-wO-pvW" id="D6g-na-kJ3">
@@ -40,7 +34,7 @@
                 <outlet property="owner" destination="N2m-gF-bst" id="KF1-Ud-vBj"/>
                 <outlet property="photo" destination="8B6-D5-96d" id="ozZ-Rf-OCi"/>
             </connections>
-            <point key="canvasLocation" x="807" y="1134.5"/>
+            <point key="canvasLocation" x="512" y="735.5"/>
         </tableViewCell>
     </objects>
 </document>
