--- a/NSInstaApp/InstagramCell.xib
+++ b/NSInstaApp/InstagramCell.xib
@@ -1,40 +1,61 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="243" id="XTo-wO-pvW" customClass="InstagramCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="243"/>
-            <autoresizingMask key="autoresizingMask"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="253" id="XTo-wO-pvW" customClass="InstagramCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="253"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XTo-wO-pvW" id="D6g-na-kJ3">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N2m-gF-bst">
-                        <rect key="frame" x="0.0" y="8" width="320" height="21"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8B6-D5-96d">
+                        <rect key="frame" x="85" y="47" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="height" priority="999" constant="150" id="OLU-QA-wcs"/>
+                            <constraint firstAttribute="width" priority="999" constant="150" id="SuR-rO-Buv"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfN-GM-6aH">
+                        <rect key="frame" x="8" y="214" width="304" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8B6-D5-96d">
-                        <rect key="frame" x="40" y="37" width="240" height="128"/>
-                    </imageView>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut " translatesAutoresizingMaskIntoConstraints="NO" id="zeX-j6-LOx">
-                        <rect key="frame" x="0.0" y="181" width="320" height="64"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    </textView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N2m-gF-bst">
+                        <rect key="frame" x="8" y="16" width="304" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="N2m-gF-bst" firstAttribute="top" secondItem="D6g-na-kJ3" secondAttribute="topMargin" constant="8" id="Rnr-v9-99H"/>
+                    <constraint firstItem="N2m-gF-bst" firstAttribute="trailing" secondItem="D6g-na-kJ3" secondAttribute="trailingMargin" id="Vme-1d-Jsq"/>
+                    <constraint firstItem="N2m-gF-bst" firstAttribute="leading" secondItem="D6g-na-kJ3" secondAttribute="leadingMargin" id="aiU-4Q-ug1"/>
+                    <constraint firstItem="gfN-GM-6aH" firstAttribute="leading" secondItem="D6g-na-kJ3" secondAttribute="leadingMargin" id="c6l-dE-f9w"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="8B6-D5-96d" secondAttribute="trailing" constant="77" id="iVh-CU-9Xh"/>
+                    <constraint firstItem="8B6-D5-96d" firstAttribute="leading" secondItem="D6g-na-kJ3" secondAttribute="leadingMargin" constant="77" id="jek-4J-XaW"/>
+                    <constraint firstItem="gfN-GM-6aH" firstAttribute="top" secondItem="8B6-D5-96d" secondAttribute="bottom" constant="17" id="ouZ-nN-cFc"/>
+                    <constraint firstItem="8B6-D5-96d" firstAttribute="top" secondItem="N2m-gF-bst" secondAttribute="bottom" constant="10" id="pMS-8A-HuG"/>
+                    <constraint firstItem="gfN-GM-6aH" firstAttribute="trailing" secondItem="D6g-na-kJ3" secondAttribute="trailingMargin" id="tND-fW-5gB"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="comment" destination="zeX-j6-LOx" id="iTt-gu-Bjq"/>
+                <outlet property="comment" destination="gfN-GM-6aH" id="hVc-QC-GBI"/>
                 <outlet property="owner" destination="N2m-gF-bst" id="KF1-Ud-vBj"/>
                 <outlet property="photo" destination="8B6-D5-96d" id="ozZ-Rf-OCi"/>
             </connections>
-            <point key="canvasLocation" x="512" y="735.5"/>
+            <point key="canvasLocation" x="299" y="389.5"/>
         </tableViewCell>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
